update header component

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "around-react",
-  "homepage": "https://nitzanc07.github.io/around-react/",
+  "homepage": "https://nitzanc07.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
